Adding Django restful api

--- a/article/templates/article/article.html
+++ b/article/templates/article/article.html
@@ -20,7 +20,7 @@ body{
     <div class="row my-5">
         
         <div class="col-md-4">
-            <img src="/media/{{context.thumbnail}}" class="rounded-pill" ></img>
+            <img src="/media/{{context.thumbnail}}" class="rounded-pill rounded-pill img-thumbnail" ></img>
             
             <div class="row align-middle px-5">
                 <button class="btn btn-primary cartButton my-5 mx-4 ">Like</button>
