changes in article templates

--- a/article/templates/article/article.html
+++ b/article/templates/article/article.html
@@ -5,7 +5,7 @@
 {% block css %}
 
 body{
-        
+
   background-image: url({%static 'tree.webp'%});
   background-repeat: no-repeat;
   background-size: cover;
@@ -15,20 +15,20 @@ body{
 
 
 {% block content %}
-    
+
 <div class="container">
     <div class="row my-5">
-        
+
         <div class="col-md-4">
-            <img src="/media/{{context.thumbnail}}" class="rounded-pill" ></img>
-            
+            <img src="/media/{{context.thumbnail}}" class="rounded-pill img-thumbnail" ></img>
+
             <div class="row align-middle px-5">
                 <button class="btn btn-primary cartButton my-5 mx-4 ">Like</button>
                 <button class="btn btn-primary cartButton my-5 mx-2">Dislike</button>
             </div>
 
         </div>
-    
+
         <div class="col-md-8">
             <h1>{{context.title}}</h1>
             <h5>{{context.body}}</h2>
