--- a/article/templates/article/basic.html
+++ b/article/templates/article/basic.html
@@ -10,20 +10,20 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Blog for everyone</title>
 
     <style>
 
         body{
-                
+
           background-image: url({%static 'tree.webp'%});
           background-repeat: no-repeat;
           background-size: cover;
-          background-attachment: fixed;   
+          background-attachment: fixed;
         }
         {% block css %}
         {% endblock %}
-        
+
     </style>
 
   </head>
@@ -34,7 +34,7 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-      
+
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
@@ -47,7 +47,7 @@
             <li class="nav-item active">
               <a class="nav-link" >Hello {{user}} <span class="sr-only">(current)</span></a>
             </li>
-            
+
             <li class="nav-item active">
               <a class="nav-link" href="{% url 'logout' %}">LogOut<span class="sr-only">(current)</span></a>
             </li>
@@ -65,7 +65,7 @@
               <a class="nav-link" href="{% url 'login' %}">Login<span class="sr-only">(current)</span></a>
             </li>
             {% endif %}
-            
+
 
 
           </ul>
