--- a/article/templates/article/basic.html
+++ b/article/templates/article/basic.html
@@ -10,6 +10,10 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
+
+
+
+
     <title>Blog for everyone</title>
 
     <style>
@@ -25,6 +29,8 @@
         {% endblock %}
 
     </style>
+
+    <script src="https://kit.fontawesome.com/3b29b2aedc.js" crossorigin="anonymous"></script>
 
   </head>
   <body>
